Updates for new semester

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
           <h3>University of Southern California</h3>
           <span>B.S. in Computer Science, Expected 2022</span>
           <ul>
-            <li>Discrete Methods in Computer Science</li>
-            <li>Calculus III for Engineers</li>
+            <li>Discrete Methods in CS, Software Development (2019)</li>
+            <li>Calculus III, Linear Algebra (2019), Linguistics (2019)</li>
           </ul>
         </div>
         <div id="mbhs">
           <h3>Montgomery Blair High School</h3>
           <span>Math and Science Magnet Program, Graduated 2018</span>
           <ul>
-            <li>Principles of Software Design, AI with LISP, Computer Graphics</li>
-            <li>Calculus III, Differential Equations, Complex Analysis, Math Logic</li>
+            <li>Software Design, AI with LISP, Computer Graphics</li>
+            <li>Calculus III, Diffeq, Complex Analysis, Math Logic</li>
           </ul>
         </div>
       </div>
@@ -79,12 +79,12 @@
             <ul>
               <li class="heavy">Swift</li>
               <li class="heavy">TypeScript</li>
-              <li>Java</li>
+              <li>C#</li>
             </ul>
             <ul>
-              <li>C#</li>
+              <li>Java</li>
               <li>C/C++</li>
-              <li>Rust</li>
+              <li class="invisible"></li>
             </ul>
           </div>
         </div>
@@ -113,7 +113,7 @@
           <ul>
             <li>Version control</li>
             <li>Stack deployment</li>
-            <li>Kanban, agile</li>
+            <li>Kanban, Agile</li>
           </ul>
         </div>
       </div>
