Switch around skills

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <ul>
               <li class="heavy">Swift</li>
               <li class="heavy">TypeScript</li>
-              <li>C#</li>
+              <li>C/C++</li>
             </ul>
             <ul>
+              <li>C#</li>
               <li>Java</li>
-              <li>C/C++</li>
               <li class="invisible"></li>
             </ul>
           </div>
@@ -104,7 +104,7 @@
             <ul>
               <li>D3</li>
               <li>Numpy</li>
-              <li>.NET</li>
+              <li>Unity</li>
             </ul>
           </div>
         </div>
