--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <ul>
               <li class="heavy">Swift</li>
               <li class="heavy">TypeScript</li>
-              <li>C/C++</li>
+              <li class="heavy">C#</li>
             </ul>
             <ul>
-              <li>C#</li>
+              <li>C/C++</li>
               <li>Java</li>
               <li class="invisible"></li>
             </ul>
