--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <h3>University of Southern California</h3>
           <span>B.S. in Computer Science, Expected 2022</span>
           <ul>
-            <li>Discrete Methods in CS, Software Development (2019)</li>
-            <li>Calculus III, Linear Algebra (2019), Linguistics (2019)</li>
+            <li>Discrete Methods in CS, Software Development</li>
+            <li>Calculus III, Linear Algebra, TA for Advanced C++</li>
           </ul>
         </div>
         <div id="mbhs">
@@ -59,7 +59,7 @@
           <span>Math and Science Magnet Program, Graduated 2018</span>
           <ul>
             <li>Software Design, AI with LISP, Computer Graphics</li>
-            <li>Calculus III, Diffeq, Complex Analysis, Math Logic</li>
+            <li>Calculus III, Differentials, Complex Analysis, Math Logic</li>
           </ul>
         </div>
       </div>
@@ -82,7 +82,7 @@
               <li class="heavy">C#</li>
             </ul>
             <ul>
-              <li>C/C++</li>
+              <li class="heavy">C/C++</li>
               <li>Java</li>
               <li class="invisible"></li>
             </ul>
@@ -98,8 +98,8 @@
             </ul>
             <ul>
               <li class="heavy">Flask</li>
+              <li class="heavy">Vue</li>
               <li>Cocoa</li>
-              <li>Node</li>
             </ul>
             <ul>
               <li>D3</li>
