Fix up styles, update content

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <div id="education">
       <!--h2>Education</h2>
       <hr-->
-      <div class="row">
+      <div class="row schools">
         <div id="usc">
           <h3>University of Southern California</h3>
           <span>B.S. in Computer Science, Expected 2022</span>
           <ul>
             <li>Discrete Methods in CS, Software Development</li>
-            <li>Calculus III, Linear Algebra, TA for Advanced C++</li>
+            <li>Multivar, Linear Algebra, TA for Advanced C++</li>
           </ul>
         </div>
         <div id="mbhs">
@@ -59,7 +59,7 @@
           <span>Math and Science Magnet Program, Graduated 2018</span>
           <ul>
             <li>Software Design, AI with LISP, Computer Graphics</li>
-            <li>Calculus III, Differentials, Complex Analysis, Math Logic</li>
+            <li>Multivar, Differentials, Complex Analysis, Logic</li>
           </ul>
         </div>
       </div>
@@ -83,8 +83,8 @@
             </ul>
             <ul>
               <li class="heavy">C/C++</li>
-              <li>Java</li>
-              <li class="invisible"></li>
+              <li class="heavy">Java</li>
+              <li>Rust</li>
             </ul>
           </div>
         </div>
@@ -99,12 +99,12 @@
             <ul>
               <li class="heavy">Flask</li>
               <li class="heavy">Vue</li>
-              <li>Cocoa</li>
+              <li class="heavy">Cocoa</li>
             </ul>
             <ul>
-              <li>D3</li>
+              <li>Unreal</li>
               <li>Numpy</li>
-              <li>Unity</li>
+              <li>D3</li>
             </ul>
           </div>
         </div>
@@ -121,6 +121,21 @@
     <div id="experience">
       <h2>Experience</h2>
       <hr>
+      <h3>
+        Sierra Nevada Corporation
+        <span class="light">| Full Stack Software Developer</span>
+        <span class="right light gray">Summer 2019</span>
+      </h3>
+      <ul>
+        <li>
+          Led the design and development of CAWP, a software vulnerability aggregation tool packaged with features
+          including an independent vulnerability knowledge-base and a CSV/PDF report generator.
+
+        </li>
+        <li>
+          Developed an efficient AWS data-lake visualization tool for use in commercial applications with high throughput.
+        </li>
+      </ul>
       <h3>
         Georgetown University
         <span class="light">| Intern Software Developer</span>
@@ -153,22 +168,6 @@
         </li>
         <li>
           Developed reverse engineering toolkit for detecting malicious C/C++ binaries based on compiler patterns.
-        </li>
-      </ul>
-      <h3>
-        Montgomery Blair HS
-        <span class="light">| Student Network Administrator</span>
-        <span class="right light gray">September 2015 to June 2018</span>
-      </h3>
-      <ul>
-        <li>
-          Led a team of 10 to 15 students that maintained the school's server infrastructure,
-          networking hardware, and the internal networks as well as managed all website content, domain names,
-          certificates, and firewalls for
-          <a href="https://mbhs.edu" target="_blank">mbhs.edu</a>.</li>
-        <li>
-          Developed an integrated web service for managing over 3000 students and providing them access to schedules,
-          available classes, and <a href="https://mbhs.edu">mbhs.edu</a> email.
         </li>
       </ul>
     </div>
@@ -215,9 +214,9 @@
           </div>
         </div>
         <div id="societies">
-          <h3>Societies</h3>
+          <h3>Qualifications</h3>
           <ul class="plain clip">
-            <li><span class="year">2018</span> USC McCarthy Honors College</li>
+            <li>Top Secret Clearance</li>
           </ul>
         </div>
       </div>
