Update resume for Graduate stuff

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div id="contact">
           <span class="link">
             <a href="https://github.com/noahbkim" target="_blank">
-              <img src="img/github.png" class="icon">
+              <img src="img/github.png" alt="GitHub" class="icon">
               noahbkim
             </a>
           </span>
           <span class="link">
             <a href="https://linkedin.com/in/noahbkim" target="_blank">
-              <img src="img/linkedin.png" class="icon">
+              <img src="img/linkedin.png" alt="LinkedIn" class="icon">
               noahbkim
             </a>
           </span>
@@ -27,14 +27,14 @@
         <div id="links">
           <span class="link">
             <a href="mailto:noahbkim@gmail.com">
-              <img src="img/mail.png" class="icon">
+              <img src="img/mail.png" alt="Email" class="icon">
               noahbkim@gmail.com
             </a>
           </span>
           <span class="link">
             <a href="https://noahb.kim" target="_blank">
-              <img src="img/web.png" class="icon">
-              https://noahb.kim
+              <img src="img/web.png" alt="Website" class="icon">
+              noahb.kim
             </a>
           </span>
         </div>
@@ -50,16 +50,18 @@
           <h3>University of Southern California</h3>
           <span>B.S. in Computer Science, Expected 2022</span>
           <ul>
-            <li>Discrete Methods in CS, Software Development</li>
-            <li>Calculus III, Linear Algebra, TA for Advanced C++</li>
+            <li>Discrete Methods, Software Development, Tech Startup</li>
+            <li>Calculus III, Topology, Linear Algebra, Probability</li>
+            <li>Head TA for CSCI 104, 20-29 TA's, 200-300+ students</li>
           </ul>
         </div>
         <div id="mbhs">
           <h3>Montgomery Blair High School</h3>
           <span>Math and Science Magnet Program, Graduated 2018</span>
           <ul>
-            <li>Software Design, AI with LISP, Computer Graphics</li>
-            <li>Calculus III, Differentials, Complex Analysis, Math Logic</li>
+            <li>Software Design, AI in LISP, Computer Graphics</li>
+            <li>Calculus III, Differential Equation</li>
+            <li>Complex Analysis, Mathematical Logic</li>
           </ul>
         </div>
       </div>
@@ -79,10 +81,10 @@
             <ul>
               <li class="heavy">Swift</li>
               <li class="heavy">TypeScript</li>
-              <li class="heavy">C#</li>
+              <li class="heavy">C/C++</li>
             </ul>
             <ul>
-              <li class="heavy">C/C++</li>
+              <li>C#</li>
               <li>Java</li>
               <li class="invisible"></li>
             </ul>
@@ -104,7 +106,7 @@
             <ul>
               <li>D3</li>
               <li>Numpy</li>
-              <li>Unity</li>
+              <li>Unreal</li>
             </ul>
           </div>
         </div>
@@ -182,8 +184,8 @@
       </h3>
       <p>
         Working with <a href="http://geon.usc.edu/~biederman/" target="_blank">Dr. Irving Biederman</a> and several
-        undergraduate researchers to study how we process and recognize images, particularly faces. I am currently
-        developing a centralized subject testing suite and an improved Gabor-based face recognition algorithm.
+        undergraduate researchers to study how we process and recognize images, particularly faces. Design a centralized
+        subject testing suite and an improved Gabor-based face recognition algorithm.
       </p>
       <h3>
         ADS Simplex Project
