Update with SIG

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           Provided deeply configurable frontend components that can be reused across backends.
         </li>
         <li>
-          Created a general-purpose, SQL-like query language translators for TimescaleDB, MongoDB, and ElasticSearch.
+          Created a general-purpose, SQL-like query language with translators for TimescaleDB, MongoDB, and ElasticSearch.
           Built a query editor with contextual syntax highlighting, backend-specific autocompletion, and transparent error reporting.
         </li>
       </ul>
