--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <h3>Montgomery Blair High School</h3>
           <span class="subtitle">Math and Science Magnet Program, Graduated 2018</span>
           <ul>
-            <li>Software Design, AI in LISP, Graphics, Formal Logic, Quantum</li>
+            <li>Software Design, AI in LISP, Graphics, Logic, Quantum</li>
             <li>Mathematical Physics, Differential, Complex, Linear, Calculus</li>
           </ul>
         </div>
