--- a/index.html
+++ b/index.html
@@ -147,15 +147,16 @@
       <ul>
         <li>
           Forked the CPython interpreter to implement lazy imports, dramatically reducing startup time for tangled parts of the codebase at near-zero cost.
-          Currently porting the implementation to 3.12.
+          Oversaw the migration to lazy imports.
+          Ported the implementation from 3.10 to 3.12.
         </li>
         <li>
           Developed Tangle Tools (featured on <a href="https://www.python.org/success-stories/building-a-dependency-graph-of-our-python-codebase/" target="_blank">Python Success Stories</a>),
           a Python package, CLI, and IDE integration aimed at efficiently modeling, tracing, and reducing dependency cycles in large Python codebases.
         </li>
         <li>
-          Helped maintain & migrate firm-wide Python infrastructure including interpreters, virtual environments, deployment paths, and metrics.
-          Designed an internal CLI tool that streamlined creating and managing Python projects.
+          Helped maintain & migrate firm-wide Python infrastructure including interpreters, linters, virtual environments, deployment paths, and metrics pipelines.
+          Authored an internal tool that streamlines creating and managing rich Python projects.
         </li>
       </ul>
       <h3>
@@ -169,9 +170,10 @@
         </li>
         <li>
           Developed <a href="https://github.com/curriculagg/curricula-grade">Curricula</a>, a framework that automates composing and grading assignments.
+          Ported existing assignments and designed new ones.
         </li>
         <li>
-          Wrote Curricula Web, a full stack site featuring a submission system with asynchronous validation and automated grading, interactive office hours ticketing with analytics, and a modernized content distribution system that improved student QOL.
+          Wrote Curricula Web, a full stack site featuring a modernized content distribution platform, a submission system with asynchronous validation and automated grading, and interactive office hours ticketing with live updates, notifications, and analytics.
         </li>
       </ul>
       <h3>
